test/files/errors/indexNotNumber.jg
_main int ()
{
    content string = "hello";

    content["hello"] print;
    0 return;
}